fix(ffe-form): increase spacing between text and icon

--- a/packages/ffe-form/less/field-message.less
+++ b/packages/ffe-form/less/field-message.less
@@ -4,7 +4,7 @@
     margin: var(--ffe-spacing-2xs) 0 var(--ffe-spacing-xs);
     display: grid;
     grid-template-columns: auto 1fr;
-    grid-column-gap: var(--ffe-spacing-2xs);
+    grid-column-gap: var(--ffe-spacing-xs);
     font-size: var(--ffe-fontsize-body-text);
     overflow-wrap: anywhere;
 
